test/spec_vectors/nop/fail/module_2.wat
(module (func $type-i64 (result i64) (nop)))